[gd_scene load_steps=4 format=1]

[ext_resource path="res://Fight.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="GDScript" id=1]

script/source = "extends Label

var fight_text = []

func _on_Fight_msg( msg ):
	if fight_text.size() > 5:
		fight_text.remove(0)
	fight_text.append(msg)
	
	var st = \"\"
	for elem in fight_text:
		st += elem + \"\\n\"
	
	set_text(st)

"

[node name="Fight" type="Node"]

script/script = ExtResource( 1 )

[node name="GoodFig" type="Sprite" parent="."]

transform/pos = Vector2( 236.955, 161.36 )
texture = ExtResource( 2 )

[node name="EvilFig" type="Sprite" parent="."]

transform/pos = Vector2( 768, 160 )
texture = ExtResource( 2 )
modulate = Color( 0.833984, 1, 0.375, 1 )

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 320.0
margin/right = 1024.0
margin/bottom = 576.0

[node name="Attack Button" type="Button" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 64.0
margin/right = 448.0
margin/bottom = 84.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Attack!!"
flat = false

[node name="Restart" type="Button" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 448.0
margin/top = -288.0
margin/right = 576.0
margin/bottom = -268.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = false

[node name="Heal Button" type="Button" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = -128.0
margin/right = 128.0
margin/bottom = -32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Use Potion"
flat = false

[node name="Juke Button" type="Button" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 352.0
margin/top = -128.0
margin/right = 448.0
margin/bottom = -32.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Juke"
flat = false

[node name="Health Wert" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 32.0
margin/right = 320.0
margin/bottom = 46.0
text = "120 HP"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Potion Count" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = -160.0
margin/right = 128.0
margin/bottom = -146.0
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bar" type="Control" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="GoodHealth" type="ProgressBar" parent="Control/Bar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 0.0
margin/right = 448.0
margin/bottom = 16.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="EvilHealth" type="ProgressBar" parent="Control/Bar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 576.0
margin/top = 0.0
margin/right = 960.0
margin/bottom = 16.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="AttackBar" type="ProgressBar" parent="Control/Bar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 96.0
margin/right = 448.0
margin/bottom = 112.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="AttackBarEnemy" type="ProgressBar" parent="Control/Bar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 576.0
margin/top = 96.0
margin/right = 960.0
margin/bottom = 112.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="Fight Text" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 128.0
margin/right = 960.0
margin/bottom = 256.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="EvilTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = false


